<resources>
    <string name="app_name">Gym Companion</string>
    <string name="google_s_logo">Google\'s Logo</string>
    <string name="google_signin_prompt">Sign in with Google</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_prompt">Don\'t have an account yet?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="banner">banner</string>
    <string name="loading_screen_prompt">weights for custom loading screen</string>
    <string name="or">or</string>
    <string name="prompt">Hi welcome to Gym Companion!</string>
    <string name="button_prompt">Let\'s get started!</string>
    <string name="progress">0%</string>
    <string name="header_prompt">Tell us about your self</string>
    <string name="next">NEXT</string>
    <string name="first_name">First name</string>
    <string name="middle_name">Middle name</string>
    <string name="surname">Surname</string>
    <string name="name_prompt">What is your name?</string>
    <string name="age_prompt">How old are you?</string>
    <string name="birthday_sample">03/28/02</string>
    <string name="bmi_prompt">What is your current height and weight?</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="gender_prompt">How do you define your gender?</string>
    <string name="male_icon">male icon</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="RNS">Others</string>
    <string name="level_prompt">How do you describe your gym experience?</string>
    <string name="beginner_s_arm">beginner\'s arm</string>
    <string name="novice">Beginner</string>
    <string name="novice_prompt">0 experience</string>
    <string name="advance">Advance</string>
    <string name="advance_prompt">1 – 5 years</string>
    <string name="proficient">Proficient</string>
    <string name="proficient_prompt">6 – 9 years</string>
    <string name="expert">Expert</string>
    <string name="expert_prompt">10+ years</string>
    <string name="sample_age">0 yrs old</string>
    <string name="finish">Finish</string>
    <string name="credentials_prompt">Almost done…</string>
    <string name="email">Email</string>
    <string name="terms_prompt">By checking the box, you agree to Gym Companion\'s policies and all the information you provided is correct.<font color="#1A70B6">Privacy Policy</font>.</string>
    <string name="dummy_text"><b>Welcome to Gym Companion!</b> Prior to completing your registration, please take a moment to review our User Registration and Data Usage Policy. Your agreement to the terms specified below is necessary for registration on our platform
        \n\n<b>Information Collection:</b>
        \nThroughout the registration process, we gather the following details:
        \n\n<b>Name</b>, <b>Birthday</b> , <b>Age</b>, <b>Experience</b>, <b>Height</b>, <b>Weight</b>, <b>Email</b>.
        \n\n<b>Purpose of Data Collection</b>:
        \nThe primary objective of collecting this data is to enhance user experience and optimize our system\'s functionality. Additionally, we utilize the camera to capture exercises, aiding in assessing the accuracy of your workout execution and assisting users in proper exercise performance.
        \n\n<b>Why We Require and Use Your Data?</b>
        \nYour data serves the following purposes:
        \n\n<b>Communication</b>: Your email address enables us to send essential announcements, updates, and notifications related to your account and system usage.
        \n\n<b>Personalization</b>: Your name, gender, birthday, height, weight and experience information may be utilized to personalize your platform experience, tailoring content to your preferences.
        \n\n<b>Camera</b>: The camera is essential to detect the correct execution of user exercises, facilitating accurate guidance on exercise performance.
        \n\n<b>Data Security</b>: We are dedicated to maintaining the security and confidentiality of your data. All collected data is securely stored, with restricted access limited to authorized personnel. Industry-standard measures are employed to protect your information from unauthorized access, disclosure, alteration, and destruction.
        \n\n<b>Data Sharing</b>: We do not share or lease your personal information with third parties.

        \n\n<b>Consent</b>: By checking the box below, you acknowledge that you have read, understood, and agree to the collection and usage of the provided data as outlined in this User Registration and <font color="#1E82D3">Data Usage Policy</font>. If you disagree with any part of this Agreement, please refrain from proceeding with the registration process.
        \n\n<b>Policy Changes</b>: We reserve the right to update and modify this policy. Any changes will be communicated to you through the email address provided during registration.</string>
    <string name="agreement_prompt">Why do we need this data?</string>
    <string name="validate">Validate</string>
    <string name="forgot_password_prompt">Forgot Password</string>
    <string name="email_add_prompt">Enter your email address.</string>
    <string name="home_fragment">home fragment</string>
    <string name="home">Home</string>
    <string name="person_fragment">person fragment</string>
    <string name="person">Person</string>
    <string name="friend_fragment">Friend Fragment</string>
    <string name="friend">Friend</string>
    <string name="profile_photo">profile photo</string>
    <string name="sample_name">Julius Andrie</string>
    <string name="icon">icon</string>
    <string name="dummy_title">Lorem Ipsum</string>
    <string name="logout">Logout</string>
    <string name="current_weight">Current BMI</string>
    <string name="personal_best">Personal Records</string>
    <string name="user_settings">USER SETTINGS</string>
    <string name="user_profile">User Profile</string>
    <string name="records">RECORDS</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="save_videos">Save Videos</string>
    <string name="settings">Settings</string>
    <string name="level">Beginner</string>
    <string name="display_name_key">display_name_key</string>
    <string name="preference_file_key">com.example.gymcompanion.PREFERENCE_KEY</string>
    <string name="sample_program">Push Day</string>
    <string name="motivational_template">"some motivational shit!!!"</string>
    <string name="start_set">Start Recording</string>
    <string name="start_program">Start Set</string>
    <string name="bench_press">Bench Press</string>
    <string name="sample_set">3 sets</string>
    <string name="sample_reps">12 reps</string>
    <string name="sample_count">1/13</string>
    <string name="finish_set">Finish Set</string>
    <string name="count_0">Count: 0</string>
    <string name="note_lorem_ipsum_dollor_amet_simet_shfjakhfyjh_f_asjkhfajskfsa"><font color="#c4c45a">Note:</font> Lorem Ipsum dollor, amet simet shfjak yjh.,f asjkhfajskfsa,.</string>
    <string name="sample_weight">15lbs</string>
    <string name="medical_condition_prompt">How is your health status?</string>
    <string name="instruction">Please check the box if you have the condition listed below</string>
    <string name="scoliosis">Scoliosis</string>
    <string name="condition">Condition</string>
    <string name="high_blood">High blood</string>
    <string name="tutorial_animation">tutorial animation for this exercise</string>
    <string name="completed">Completed</string>
    <string name="dummy_accuracy">Accuracy: 100%</string>
    <string name="dummy_time_spent">Time spent: 2min</string>
    <string name="back_button">back button</string>
    <string name="live_feed">Start Live Feed</string>
    <string name="download_button">download button</string>
    <string name="video_thumbnail">video thumbnail</string>
    <string name="extraction">Extracting Frames…</string>
    <string name="second_phase">Applying Pose Detection…</string>
    <string name="image_surface">image surface</string>
    <string name="rewind">rewind</string>
    <string name="play">play</string>
    <string name="forward">forward</string>
    <string name="repeat">repeat</string>
    <string name="dummy_time">not yet aligned</string>
    <string name="thirdPhase">compressing frames…</string>
    <string name="empty_state_prompt">empty state</string>
    <string name="empty_state_description">Resting is part of the training so do it!</string>
    <string name="addInformationPrompt">click here to start your fitness journey!</string>
    <string name="empty_state_description_1">Health information is required!</string>
    <string name="none">None</string>
    <string name="name">Name</string>
    <string name="birthday">Birthday</string>
    <string name="height_weight">Height and Weight</string>
    <string name="note_prompt">changes will be permanently applied until 30days. \nMake sure that the provided information is correct.</string>
    <string name="display_name">Display Name</string>
    <string name="alert_title">Alert Notice</string>
    <string name="instruction_dialog">Before you start the exercise make sure to place your phone upfront and eye level to you. Make sure that your head is inside the bounding box and stay for that position for at least 3 seconds to start the exercise.</string>
    <string name="don_t_show_again">Don\'t show this again</string>
    <string name="okay">Okay</string>
    <string name="start_exercise">Start the exercise!</string>
    <string name="dashboard">Dashboard</string>
    <string name="date_prompt">January, 2023</string>
    <string name="weight_lost">Lost Weight</string>
    <string name="menu">menu</string>
    <string name="sample_date">December, 2023</string>
    <string name="weekly">Weekly</string>
    <string name="current_weight_sample">Current Weight</string>
    <string name="pass_weight">0 LBS</string>
    <string name="filter">Filter</string>
    <string name="progress_title">Monthly Progress</string>
    <string name="progress_title1">Detailed Progress</string>
    <string name="sort_by">Sort by</string>
    <string name="monthly">Monthly</string>
    <string name="custom">Custom</string>
    <string name="apply">APPLY</string>
    <string name="cancel">CANCEL</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="sample_month">Jan</string>
    <string name="yearly">Yearly</string>
    <string name="Dips">Dips</string>
    <string name="db_press">Dumbbell Shoulder Press</string>
    <string name="flat_bench_press">Flat Bench Press</string>
    <string name="incline_bench">Incline Bench Press</string>
    <string name="side_lateral">Side Lateral Raises</string>
    <string name="skull_crushers">Skull Crushers</string>
    <string name="barbell_curls">Barbell Curls</string>
    <string name="barbell_rows">Barbell Rows</string>
    <string name="deadlift">Deadlift</string>
    <string name="dumbbell_rows">Dumbbell Rows</string>
    <string name="lat_pull_down">Lat Pull down</string>
    <string name="preacher_curls">Preacher Curls</string>
    <string name="leg_extension">Leg Extension</string>
    <string name="lunges">Lunges</string>
    <string name="rdl">Romanian Deadlift</string>
    <string name="squats">Squats</string>
    <string name="push_day">Push Day</string>
    <string name="pull_day">Pull Day</string>
    <string name="leg_day">Leg Day</string>
    <string name="set_finish_image">set finish image</string>
    <string name="set_finish">Set Finish!</string>
    <string name="total_accuracy_template">Total Accuracy: 90%</string>
    <string name="total_time_template">Total Time: 18 sec</string>
</resources>