<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:contentDescription="@string/home_fragment"
        android:icon="@drawable/baseline_home_24"
        app:showAsAction="ifRoom"
        android:title="@string/home"
        android:enabled="true"/>
    <item
        android:id="@+id/frag1"
        android:contentDescription="@string/home_fragment"
        android:icon="@drawable/baseline_home_24"
        app:showAsAction="ifRoom"
        android:title="@string/home" />
    <item
        android:id="@+id/findFriend"
        android:contentDescription="@string/friend_fragment"
        android:icon="@drawable/baseline_people_alt_24"
        app:showAsAction="ifRoom"
        android:title="@string/friend" />
    <item
        android:id="@+id/frag3"
        android:contentDescription="@string/home_fragment"
        android:icon="@drawable/baseline_home_24"
        app:showAsAction="ifRoom"
        android:title="@string/home" />
    <item
        android:id="@+id/account"
        android:contentDescription="@string/person_fragment"
        android:icon="@drawable/baseline_person_24"
        app:showAsAction="ifRoom"
        android:title="@string/person" />

</menu>