<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitCenter"
            android:id="@+id/action_image"
            android:contentDescription="@string/tutorial_animation"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:id="@+id/back"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/baseline_arrow_back_24"
                android:contentDescription="@string/back_button"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="end">

                <TextView
                    android:id="@+id/sets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_set"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:background="@drawable/round_edit_text"
                    android:padding="10dp"
                    />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/reps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_reps"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:background="@drawable/round_edit_text"
                    android:backgroundTint="@color/lightPrimary"
                    android:padding="10dp"
                    />
                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/weights"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_weight"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:background="@drawable/round_edit_text"
                    android:backgroundTint="@color/lightPrimary"
                    android:padding="10dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/program"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/dummy_title"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_bold"
        />

    <TextView
        android:id="@+id/description"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dummy_text"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        android:justificationMode="inter_word"
        />

    <Button
        android:id="@+id/startRecord"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:textColor="@color/white"
        android:text="@string/start_set"
        />
    <Button
        android:id="@+id/startLiveFeed"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:textColor="@color/white"
        android:text="@string/live_feed"
        />


</LinearLayout>