<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CustomViews.ExerciseFinishActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="10dp"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/celebrating"
        android:contentDescription="@string/set_finish_image"
        />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_finish"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_bold"
        />
    <TextView
        android:id="@+id/totalAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_accuracy_template"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/poppins"
        />
    <TextView
        android:id="@+id/totalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_time_template"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins"
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:textColor="@color/white"
        android:textSize="18sp"
        />


</LinearLayout>