<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/round_edit_text"
    android:backgroundTint="@color/white"
    tools:context=".ui.CustomViews.CustomViewActivity"
    android:layout_margin="10dp"

    >

    <TextView
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alert_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/lightPrimary"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_dialog"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:justificationMode="inter_word"
        />

    <CheckBox
        android:id="@+id/neverShowAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_show_again"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/okay"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/okay"
        android:textSize="18sp"
        android:background="@drawable/round_edit_text"
        android:layout_gravity="end"
        android:textColor="@color/white"
        />



</LinearLayout>